# assertion-prover

./: README
client/: README
client/examples/: Kleene_algebra.ap  misc.ap
src/: LICENSE  README  dune-project
src/examples/: examples.ap
src/lib/: dune  lex.ml  lib.ml  parser.ml  preprocess.ml  search.ml
